ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: prometheus.example.com 
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-service
          servicePort: 8080

  tls:
  - hosts: 
    - prometheus.apps.shaker242.lab
    secretName: prometheus-secret
